# tokio-issues-6930

./: Cargo.toml  README.md
src/: main.rs  main_2.rs
