[package]
name = "rust_tokio_issue_6930"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"]}

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_2"
path = "src/main_2.rs"


